# flask_reverse_proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
setup/: linux_setup.sh
src/app/: Dockerfile  __init__.py  appEntry.py  config.py
src/app/templates/: base.html
src/app/tests/: conftest.py  test_flask_app.py
src/nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_flask_app.py
