[tool.poetry]
name = "python-flask-cicd-azure"
version = "0.1.0"
description = "Simple boilerplate code to launch a flask app on azure"
authors = ["Jarryd Harris <mail@jarrydharris.org>"]
readme = "README.md"
packages = [{include = "python_flask_cicd_azure"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pytest = "^7.2.2"
waitress = "^2.1.2"
pre-commit = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
